fix overflow for history section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,6 +73,12 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   background-color: #0072bb;
   color: #ffffff;
+  overflow: auto;
+}
+
+.history p {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* About me - facts section styling */
